criação do arquivo ui, ajeitei a main principal e monstei o design pro primeiro botao que é da planilha

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-chave_api_OPNAI=tete
-chave_api_Gemini=titi
+Gemini_KEY=minha_chave_aqui
+PLANILHA_DIR=C:\Users\Lenovo\Documents\Planilhas
+OPENAI_KEY=minha_chave_aqui
+MODO_DEBUG=True
